<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>3dmap_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nagaoaustineo@gmail.com">robo23</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_cmake_auto</depend>
  <depend>eigen</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
